--- a/src/components/driver-privacy/driver-privacy.css
+++ b/src/components/driver-privacy/driver-privacy.css
@@ -255,9 +255,7 @@
 .benefit-icon {
   width: 70px;
   height: 70px;
-  background-color: #f5f7fa;
   color: #16234d;
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -269,8 +267,7 @@
 }
 
 .benefit-card:hover .benefit-icon {
-  background-color: #ff3a3a;
-  color: #ffffff;
+  color: #ff3a3a;
   transform: rotateY(360deg);
 }
 
