--- a/src/components/services/business/business.css
+++ b/src/components/services/business/business.css
@@ -202,9 +202,7 @@
 .solution-icon {
   width: 70px;
   height: 70px;
-  background-color: var(--light-bg);
   color: var(--primary-color);
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -214,8 +212,7 @@
 }
 
 .solution-card:hover .solution-icon {
-  background-color: var(--accent-color);
-  color: var(--white);
+  color: var(--accent-color);
   transform: rotateY(360deg);
 }
 
