--- a/src/components/services/express/express.css
+++ b/src/components/services/express/express.css
@@ -201,9 +201,7 @@
 .feature-icon {
   width: 70px;
   height: 70px;
-  background-color: var(--light-bg);
   color: var(--primary-color);
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -213,8 +211,7 @@
 }
 
 .feature-card:hover .feature-icon {
-  background-color: var(--accent-color);
-  color: var(--white);
+  color: var(--accent-color);
   transform: rotateY(360deg);
 }
 
